add WS and kafka style
